<resources>
    <string name="app_name">FrontRunner</string>
</resources>
