appId: ${APP_ID}
name: Edit Market
onFlowStart: 
  - runFlow: ./components/setup.yaml
onFlowComplete: 
  - runFlow: ./components/teardown.yaml
---
### Home Screen
- assertVisible: "FrontRunner"
- tapOn: "Details"

### Market Details Screen
- assertVisible: "Market Details"
- copyTextFrom: {id: "MarketCap"}  # Copy the marketcap text
- runScript: scripts/marketcap.js  # Run validation script
- assertTrue: ${output.marketCap}  # Assert that the marketcap is a number
- takeScreenshot: {path: "./.maestro/screenshots/MarketDetails.png"}
- tapOn: "Edit"

### Edit Source Screen
- assertVisible: "Edit Sources"
- tapOn:
    id: "chip"
    index: 0
- tapOn: "Save Changes"

### Market Details Screen
- assertVisible: "Market Details"