appId: ${APP_ID}  # The app id is the package name of the app
name: Add Market  # The name of the flow
onFlowStart: 
  - runFlow: ./components/setup.yaml  # Run the setup flow
onFlowComplete: 
  - runFlow: ./components/teardown.yaml  # Run the teardown flow
---

### Home Screen
- assertVisible: "FrontRunner"  # Assert that the "FrontRunner" title is visible
- tapOn: "Add Market"  # Tap on the "Add Market" button

### Select Market Screen
- assertVisible: "Select Market"  # Assert that the "Select Market" screen is visible
# Click the first market in the list
- tapOn:
    id: "card"
    index: 0
- tapOn: "Continue"

### Select Sources Screen
- assertVisible: "Select Sources"  # Assert that the "Select Sources" screen is visible
# Add the first source
- tapOn:
    id: "card"
    index: 0
- tapOn: "Continue"

### Confirm Market Screen
- assertVisible: "Confirm Market"
- tapOn: "Confirm"

### Home Screen
- assertVisible: "FrontRunner"  # Assert that the "FrontRunner" title is visible
# Todo: Assert that the new market is in the list

- stopApp # Stops the app